--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/itextpdf-5.5.13.2-javadoc.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
